# yr1_coursework

./: .gitignore  CMakeLists.txt  README.md  ascii_art.c  ascii_art.h  end_stats.c  end_stats.h  grid_generation.c  grid_generation.h  initial_shop.c  initial_shop.h  main.c  main.h  main_menu.c  main_menu.h  mining.c  mining.h  output_grid.c  output_grid.h  player_move.c  player_move.h  shop.c  shop.h
